# Didascalie

./: .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  LICENSE  README.html  README.md  angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.doc.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: ci.yml  main.yml
dev/test/: coarse2fine.ipynb
docs/: auto-update.md
documentation/: coverage.html  dependencies.html  index.html  modules.html  overview.html  properties.html
documentation/classes/: MulticlassTask.html  MultilabelTask.html  StampMaker.html  Tool.html  Tools.html  UndoRedoStack.html  _RedoStack.html  _UndoStack.html
documentation/components/: AppComponent.html  BlockableDiv.html  BlockableP.html  ClassificationConfigurationComponent.html  DrawableCanvasComponent.html  EditorComponent.html  GalleryComponent.html  GalleryElementComponent.html  InstanceLabelComponent.html  InteractiveBboxComponent.html  LabelledSwitchComponent.html  LabelsComponent.html  LoadingComponent.html  ProjectConfigurationComponent.html  SVGElementsComponent.html  TestingComponent.html  ToolSettingComponent.html  ToolbarComponent.html
documentation/injectables/: BboxManagerService.html  CLIService.html  CanvasManagerService.html  DrawService.html  EditorService.html  IOService.html  ImageProcessingService.html  LabelsService.html  OpenCVService.html  PostProcessService.html  ProjectService.html  SVGUIService.html  StateManagerService.html  UndoRedoService.html  ViewService.html  ZoomPanService.html
documentation/interfaces/: BboxLabel.html  Color.html  EventPayload.html  ImageFromCLI.html  LabelFormat.html  MulticlassInterface.html  MultilabelInterface.html  Point2D-1.html  Point2D.html  ProjectConfig.html  ProjectFile.html  Rect-1.html  Rect.html  SegInstance.html  SegLabel.html  Thumbnail.html  UndoRedoCanvasElement.html  Viewbox-1.html  Viewbox.html
documentation/js/: menu-wc.js  menu-wc_es5.js
documentation/js/search/: search_index.js
documentation/miscellaneous/: enumerations.html  functions.html  variables.html
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: annotation.rs  classification.rs  crf.rs  dataset_io.rs  dl.rs  export.rs  flood_fill.rs  frame.rs  images.rs  io.rs  mod.rs  project.rs  registration.rs  segmentation.rs  sequences.rs  skeletonize.rs  superpixel.rs  system_infos.rs  text_description.rs  vector.rs  vectorize.rs
src-tauri/src/commands/formats/: coco.rs  geometry.rs  masks.rs  mod.rs  storage.rs  yolo.rs
src-tauri/src/connection/: coms.rs  connection.rs  inference.rs  mod.rs  request.rs  types.rs
src-tauri/src/dl/: feature_extract.rs  mod.rs  model.rs  model_manager.rs
src-tauri/src/storage/: mod.rs  queries.rs  rle.rs  schema.rs
src-tauri/src/superpixel/: mod.rs
src-tauri/src/tools/: mod.rs  split_and_merge.rs
src-tauri/src/types/: command.rs  dataset.rs  export.rs  image.rs  mod.rs  project.rs
src-tauri/src/utils/: color.rs  error.rs  mod.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/Components/Blockable/div/: div.component.ts
src/app/Components/Blockable/p/: p.component.spec.ts
src/app/Components/Core/labelled-switch/: labelled-switch.component.html  labelled-switch.component.ts
src/app/Core/: interface.ts  save_load.ts  task.ts  tools.ts
src/app/Core/io/: formats.ts  save_load.ts
src/app/Core/misc/: binarize.ts  colors.ts  label-ops.ts  undo-redo.ts  undoRedo.ts
src/app/Guards/: project-started.guard.ts
src/app/Services/: app-initialization.service.ts  cli.service.ts  global-error-handler.ts  inference-client.service.spec.ts  inference-client.service.ts  io.service.ts  multiframes.service.ts  notification.service.ts  open-cv.service.ts  pyramid.service.ts  sequence.service.ts  tauri-event.service.spec.ts  tauri-event.service.ts  theme.service.ts  thumbnail.service.ts  uistate.service.ts  update.service.ts
src/app/Services/Labels/: batch-annotation.service.spec.ts  batch-annotation.service.ts  classification.service.ts  labelTreeNode.ts  labels.service.ts  propagation.service.ts
src/app/Services/Navigation/: navigation.service.ts
src/app/Services/Project/: classification.service.ts  io.service.ts  labels.service.ts  multiframes.service.spec.ts  multiframes.service.ts  project.service.ts
src/app/Services/ProjectService/: index.ts  project-config.service.ts  project-file.service.ts  project-revision.service.spec.ts  project-revision.service.ts  project-storage.service.ts  project.service.ts
src/app/Services/TauriEvent/: cli.service.ts  index.ts  interface.ts  tauri-event-base.ts  tauri-event.service.ts
src/app/Services/UI/: editor.service.ts  view.service.ts
src/app/experimental/: README.md  descriptor.ts  experimental.directive.ts  feature-flags.service.ts  registry.ts
src/app/experimental/crf/: crf-settings.component.html  crf-settings.component.ts  crf.feature.ts  crf.service.ts
src/app/experimental/experimental-settings/: experimental-settings.component.html  experimental-settings.component.ts
src/app/experimental/superpixel/: superpixel-settings.component.html  superpixel-settings.component.ts  superpixel.feature.ts  superpixel.service.ts
src/app/generics/: generics.module.ts
src/app/generics/labelled-switch/: labelled-switch.component.html  labelled-switch.component.spec.ts  labelled-switch.component.ts
src/app/generics/vertical-menu/: menu-group.directive.ts  vertical-menu.component.html  vertical-menu.component.scss  vertical-menu.component.ts
src/app/generics/wheel-menu/: wheel-menu.component.html  wheel-menu.component.scss  wheel-menu.component.spec.ts  wheel-menu.component.ts
src/app/lib/: api.ts
src/environments/: environment.development.ts
(+223 files in other folders)
