[package]
name = "LabelMed"
version = "0.1.0"
description = "A Tauri App"
authors = ["Clément Playout"]
license = ""
repository = "https://github.com/ClementPla/Annotator/tree/main"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
image = "0.25.5"
regex = "1.11.1"
tauri-plugin-fs = "2"
base64 = "0.22.1"
tokio = "1.41.1"
futures = "0.3.31"
ndimage = "0.1.1"
ndarray = "0.16.1"
ndarray-image = "0.3.0"
imageproc = "0.25.0"
itertools = "0.13.0"
rayon = "1.10.0"
ort = {version = "=2.0.0-rc.9", features = ["cuda", "copy-dylibs"] }
lazy_static = "1.5.0"
zmq = "0.10.0"
thiserror = "2.0.9"
uuid = "1.11.0"
parking_lot = "0.12.3"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter", "fmt" ] }
