[package]
name = "LabelMed"
version = "0.1.0"
description = "A Tauri App"
authors = ["Clément Playout"]
license = ""
repository = "https://github.com/ClementPla/Annotator/tree/main"
edition = "2021"
rust-version = "1.85.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.3.2"
image = "0.24.9"
regex = "1.11.1"
tauri-plugin-fs = "2"
base64 = "0.22.1"
tokio = { version = "1.41.1", features = ["rt", "macros", "time"] }
futures = "0.3.31"
ndimage = "0.1.1"
ndarray = {version = "0.16.1", features = ["rayon"] }
ndarray-image = "0.3.0"
imageproc = "0.23.0"
itertools = "0.14.0"
rayon = "1.11.0"
ort = { version = "=2.0.0-rc.10", features = ["cuda", "copy-dylibs"] }
lazy_static = "1.5.0"
zmq = "0.10.0"
thiserror = "2.0.15"
uuid = { version = "1.11.0", features = ["v4"] }
parking_lot = "0.12.3"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter", "fmt" ] }
bitvec = "1.0.1"
skeletonize = "0.2.0"
svgtypes = "0.15.3"
usvg = "0.45.1"
roxmltree = "0.20.0"
hex_color = "3.0.0"
reqwest = { version = "0.12.24", features = ["stream"] }
futures-util = "0.3.31"
sha2 = "0.10.9"



[profile.dev]
incremental = true # Compile your binary in smaller steps.


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 2 # Prioritizes speed over binary size. Use `z` if you prefer smaller binary or `s` for in between.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
incremental = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
