[package]
name = "didascalie"
version = "0.5.4"
description = "Didascalie — a fast, private, AI-assisted annotation studio for medical imaging"
authors = ["Clément Playout"]
repository = "https://github.com/ClementPla/Didascalie/tree/main"
edition = "2024"
rust-version = "1.85.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "didascalie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [ "rustls-tls"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
image = "0.25.10"
# Direct use for DCT scale-on-decode of JPEG thumbnails (avoids decoding the
# full-resolution image just to shrink it). Already in the tree via `image`.
jpeg-decoder = "0.3"
regex = "1.12.3"
tauri-plugin-fs = "2"
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["rt", "macros", "time"] }
futures = "0.3.32"
ndimage = "0.1.1"
ndarray = {version = "0.16.1", features = ["rayon"] }
ndarray-image = "0.3.0"
imageproc = "0.26.2"
itertools = "0.14.0"
rayon = "1.12.0"
rmp-serde = "1.3.1" 

lazy_static = "1.5.0"
zmq = "0.10.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
parking_lot = "0.12.5"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter", "fmt" ] }
bitvec = "1.0.1"
skeletonize = "0.2.0"
svgtypes = "0.15.3"
usvg = "0.45.1"
roxmltree = "0.20.0"
hex_color = "3.0.0"
futures-util = "0.3.32"
sha2 = "0.11.0"
once_cell = "1.21.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream"] }
serde_bytes = "0.11.19"
[target.'cfg(not(target_os = "android"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "copy-dylibs"] }
# Desktop auto-update (GitHub releases). Registered under #[cfg(desktop)].
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 2 # Prioritizes speed over binary size. Use `z` if you prefer smaller binary or `s` for in between.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
incremental = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[patch.crates-io]
